{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 304,
  "lineage": "34547a61-d770-f844-3212-a92fc11055c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cad603eb26d20306",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:elastic-ip/eipalloc-0cad603eb26d20306",
            "domain": "vpc",
            "id": "eipalloc-0cad603eb26d20306",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-192-105-78.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.192.105.78",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "ansible EIP"
            },
            "tags_all": {
              "Name": "ansible EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "eipalloc-0cad603eb26d20306",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb567f6acff6b41a",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:elastic-ip/eipalloc-0eb567f6acff6b41a",
            "domain": "vpc",
            "id": "eipalloc-0eb567f6acff6b41a",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-63-82-224.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.82.224",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "ngw EIP"
            },
            "tags_all": {
              "Name": "ngw EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "eipalloc-0eb567f6acff6b41a",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02c4016b575c16309",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:instance/i-08a838d37bab340ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a838d37bab340ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "anime-review",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f173e4abf6636237"
              }
            ],
            "primary_network_interface_id": "eni-0f173e4abf6636237",
            "private_dns": "ip-10-0-1-205.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-13-53-198-58.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.198.58",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd657a932887b710",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025d95ba0bbec20e6",
            "tags": {
              "Name": "Ansible instance"
            },
            "tags_all": {
              "Name": "Ansible instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c65e3974c55f20c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "i-08a838d37bab340ad",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02c4016b575c16309",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:instance/i-020aa28bad36564bc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020aa28bad36564bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "anime-review",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d76b4bb6f34b08f1"
              }
            ],
            "primary_network_interface_id": "eni-0d76b4bb6f34b08f1",
            "private_dns": "ip-10-0-2-246.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d06629db03e9d96f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb0905cf6a9503f",
            "tags": {
              "Name": "Backend instance"
            },
            "tags_all": {
              "Name": "Backend instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0873c20cda98b8c8f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "i-020aa28bad36564bc",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.backend_sg",
            "aws_subnet.api",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02c4016b575c16309",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:instance/i-009b66ab6b41ec365",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009b66ab6b41ec365",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "anime-review",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c658ebe90ec14f4b"
              }
            ],
            "primary_network_interface_id": "eni-0c658ebe90ec14f4b",
            "private_dns": "ip-10-0-3-171.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.171",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031782347517437c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2249e7e4ab5af0c",
            "tags": {
              "Name": "Database instance"
            },
            "tags_all": {
              "Name": "Database instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011c86d8e2017195b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "i-009b66ab6b41ec365",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.database_sg",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02c4016b575c16309",
            "arn": "arn:aws:ec2:eu-north-1:463470984349:instance/i-0d1f3e511bf61b0e1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1f3e511bf61b0e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "anime-review",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0527d16adbc69af1a"
              }
            ],
            "primary_network_interface_id": "eni-0527d16adbc69af1a",
            "private_dns": "ip-10-0-1-64.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-13-48-70-79.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.70.79",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ead0c63bf755036a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025d95ba0bbec20e6",
            "tags": {
              "Name": "Frontend instance"
            },
            "tags_all": {
              "Name": "Frontend instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09f512efe1845db77"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "i-0d1f3e511bf61b0e1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.frontend_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:internet-gateway/igw-0d530ae33ab9e3362",
            "id": "igw-0d530ae33ab9e3362",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "tags": {
              "Name": "3 tier app"
            },
            "tags_all": {
              "Name": "3 tier app"
            },
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "igw-0d530ae33ab9e3362",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb567f6acff6b41a",
            "association_id": "eipassoc-03ef4bfc3e28d6ca0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0cbb44d959f118725",
            "network_interface_id": "eni-010fe47a4a32ec5da",
            "private_ip": "10.0.1.26",
            "public_ip": "13.63.82.224",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-025d95ba0bbec20e6",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            },
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "nat-0cbb44d959f118725",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "api_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:route-table/rtb-0db33158519f9b1be",
            "id": "rtb-0db33158519f9b1be",
            "owner_id": "463470984349",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cbb44d959f118725",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api route table"
            },
            "tags_all": {
              "Name": "api route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtb-0db33158519f9b1be",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:route-table/rtb-0d7ee9b3137fbbb14",
            "id": "rtb-0d7ee9b3137fbbb14",
            "owner_id": "463470984349",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cbb44d959f118725",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "database route table"
            },
            "tags_all": {
              "Name": "database route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtb-0d7ee9b3137fbbb14",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:route-table/rtb-0ad5f3e47a13a557c",
            "id": "rtb-0ad5f3e47a13a557c",
            "owner_id": "463470984349",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d530ae33ab9e3362",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtb-0ad5f3e47a13a557c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c50b20a6caff13d1",
            "region": "eu-north-1",
            "route_table_id": "rtb-0db33158519f9b1be",
            "subnet_id": "subnet-01eb0905cf6a9503f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtbassoc-0c50b20a6caff13d1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.api_rt",
            "aws_subnet.api",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f39d076ec4b86513",
            "region": "eu-north-1",
            "route_table_id": "rtb-0d7ee9b3137fbbb14",
            "subnet_id": "subnet-0a2249e7e4ab5af0c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtbassoc-0f39d076ec4b86513",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.db_rt",
            "aws_subnet.database",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a40e56c8fdacc9e",
            "region": "eu-north-1",
            "route_table_id": "rtb-0ad5f3e47a13a557c",
            "subnet_id": "subnet-025d95ba0bbec20e6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "rtbassoc-04a40e56c8fdacc9e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group/sg-0873c20cda98b8c8f",
            "description": "Allow frontend traffic in",
            "egress": [],
            "id": "sg-0873c20cda98b8c8f",
            "ingress": [],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg"
            },
            "tags_all": {
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sg-0873c20cda98b8c8f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group/sg-01c65e3974c55f20c",
            "description": "Security group of the Ansible bastion",
            "egress": [],
            "id": "sg-01c65e3974c55f20c",
            "ingress": [],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sg-01c65e3974c55f20c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group/sg-011c86d8e2017195b",
            "description": "Security group of the DB",
            "egress": [],
            "id": "sg-011c86d8e2017195b",
            "ingress": [],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sg-011c86d8e2017195b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group/sg-09f512efe1845db77",
            "description": "Allow internet traffic in",
            "egress": [],
            "id": "sg-09f512efe1845db77",
            "ingress": [],
            "name": "frontend_sg",
            "name_prefix": "",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sg-09f512efe1845db77",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:subnet/subnet-01eb0905cf6a9503f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb0905cf6a9503f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470984349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "API"
            },
            "tags_all": {
              "Name": "API"
            },
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "subnet-01eb0905cf6a9503f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:subnet/subnet-0a2249e7e4ab5af0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2249e7e4ab5af0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470984349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "subnet-0a2249e7e4ab5af0c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:subnet/subnet-025d95ba0bbec20e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d95ba0bbec20e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463470984349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-01def0c895f7ff223"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "subnet-025d95ba0bbec20e6",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:vpc/vpc-01def0c895f7ff223",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c009890d6b3978f3",
            "default_route_table_id": "rtb-0092c2a2e2d72ff66",
            "default_security_group_id": "sg-0e039869d352f9b4f",
            "dhcp_options_id": "dopt-099da8b180701c721",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01def0c895f7ff223",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0092c2a2e2d72ff66",
            "owner_id": "463470984349",
            "region": "eu-north-1",
            "tags": {
              "Name": "3 tier app"
            },
            "tags_all": {
              "Name": "3 tier app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "vpc-01def0c895f7ff223",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_backend_to_internet_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-08e26569a92b8273b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08e26569a92b8273b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0873c20cda98b8c8f",
            "security_group_rule_id": "sgr-08e26569a92b8273b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-08e26569a92b8273b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_bastion_to_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0e2742586cf7786e4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e2742586cf7786e4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0873c20cda98b8c8f",
            "region": "eu-north-1",
            "security_group_id": "sg-01c65e3974c55f20c",
            "security_group_rule_id": "sgr-0e2742586cf7786e4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0e2742586cf7786e4",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_bastion_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0cd0e41b9975ff5a0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cd0e41b9975ff5a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-011c86d8e2017195b",
            "region": "eu-north-1",
            "security_group_id": "sg-01c65e3974c55f20c",
            "security_group_rule_id": "sgr-0cd0e41b9975ff5a0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0cd0e41b9975ff5a0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_bastion_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-07464dfb1e43f7fba",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07464dfb1e43f7fba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09f512efe1845db77",
            "region": "eu-north-1",
            "security_group_id": "sg-01c65e3974c55f20c",
            "security_group_rule_id": "sgr-07464dfb1e43f7fba",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-07464dfb1e43f7fba",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_db_to_internet_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-054f91b01ff63f340",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-054f91b01ff63f340",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-011c86d8e2017195b",
            "security_group_rule_id": "sgr-054f91b01ff63f340",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-054f91b01ff63f340",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_db_to_internet_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0149542e90a2dfc07",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0149542e90a2dfc07",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-011c86d8e2017195b",
            "security_group_rule_id": "sgr-0149542e90a2dfc07",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0149542e90a2dfc07",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_frontend_to_web_ipv4_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-089fe79f05f2ab872",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-089fe79f05f2ab872",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-09f512efe1845db77",
            "security_group_rule_id": "sgr-089fe79f05f2ab872",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-089fe79f05f2ab872",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_frontend_to_web_ipv4_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0325403ac30596166",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0325403ac30596166",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-09f512efe1845db77",
            "security_group_rule_id": "sgr-0325403ac30596166",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0325403ac30596166",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_traffic_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0dc35eeae1b8004ab",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-0dc35eeae1b8004ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0873c20cda98b8c8f",
            "region": "eu-north-1",
            "security_group_id": "sg-09f512efe1845db77",
            "security_group_rule_id": "sgr-0dc35eeae1b8004ab",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0dc35eeae1b8004ab",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_traffic_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-040fba5df720e6665",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-040fba5df720e6665",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-011c86d8e2017195b",
            "region": "eu-north-1",
            "security_group_id": "sg-0873c20cda98b8c8f",
            "security_group_rule_id": "sgr-040fba5df720e6665",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-040fba5df720e6665",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0ad43fa4b6b9e65f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0ad43fa4b6b9e65f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0873c20cda98b8c8f",
            "security_group_rule_id": "sgr-0ad43fa4b6b9e65f2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0ad43fa4b6b9e65f2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_bastion_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-002702be8983c8c64",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-002702be8983c8c64",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01c65e3974c55f20c",
            "region": "eu-north-1",
            "security_group_id": "sg-0873c20cda98b8c8f",
            "security_group_rule_id": "sgr-002702be8983c8c64",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-002702be8983c8c64",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_bastion_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0882f734c530dbc32",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0882f734c530dbc32",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01c65e3974c55f20c",
            "region": "eu-north-1",
            "security_group_id": "sg-011c86d8e2017195b",
            "security_group_rule_id": "sgr-0882f734c530dbc32",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0882f734c530dbc32",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_bastion_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0ee26f6d6164b9a12",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ee26f6d6164b9a12",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01c65e3974c55f20c",
            "region": "eu-north-1",
            "security_group_id": "sg-09f512efe1845db77",
            "security_group_rule_id": "sgr-0ee26f6d6164b9a12",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0ee26f6d6164b9a12",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-02474b0746f090dc7",
            "cidr_ipv4": "86.196.244.74/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02474b0746f090dc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-01c65e3974c55f20c",
            "security_group_rule_id": "sgr-02474b0746f090dc7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-02474b0746f090dc7",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-03761f280d58160a3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-03761f280d58160a3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-09f512efe1845db77",
            "security_group_rule_id": "sgr-03761f280d58160a3",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-03761f280d58160a3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0eeabaa16826f8e3c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0eeabaa16826f8e3c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0873c20cda98b8c8f",
            "region": "eu-north-1",
            "security_group_id": "sg-011c86d8e2017195b",
            "security_group_rule_id": "sgr-0eeabaa16826f8e3c",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0eeabaa16826f8e3c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_to_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:463470984349:security-group-rule/sgr-0b8590fde49c66565",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-0b8590fde49c66565",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09f512efe1845db77",
            "region": "eu-north-1",
            "security_group_id": "sg-0873c20cda98b8c8f",
            "security_group_rule_id": "sgr-0b8590fde49c66565",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463470984349",
            "id": "sgr-0b8590fde49c66565",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}